--- a/action.yml
+++ b/action.yml
@@ -16,4 +16,6 @@ runs:
       status: ${{ job.status }}
       channel: '#build-events'
       message: ${{ inputs.action-message }}
+    env: 
+      SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
     if: always()
